# say11

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
docs/: _config.yml  configuration.md  index.md  installation.md  usage.md  voice-presets.md
docs/superpowers/plans/: 2026-05-17-say-e11.md
docs/superpowers/specs/: 2026-05-17-mkdocs-migration-design.md  2026-05-17-say-e11-design.md
src/say_e11/: audio.py  cli.py  config.py  settings.py
src/say_e11/providers/: __init__.py  base.py  deepgram.py  elevenlabs.py
tests/: test_audio.py  test_cli.py  test_config.py  test_deepgram.py  test_elevenlabs.py  test_providers_factory.py  test_settings.py  test_voice_presets.py
