[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "say-e11"
version = "0.1.0"
description = "TTS CLI replicating macOS say, using ElevenLabs or Deepgram"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.scripts]
say = "say_e11.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/say_e11"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
